2009-08-08  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (showversion, about_avatarsay):
	different implementation, possibility to show license

	* avtreadfile.c: new file
	avtaddons.h, avatarsay.c: adapted

2009-08-07  Andreas K. Foerster  <info@akfoerster.de>

	* avtaddons.h: changed the type of avta_term_apc_cmd
	avtarsay.c (avatar_comman, APC_command): adapted

	* avatar.c (avt_pager_mb): support for keys: Space, f, b

2009-08-06  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (avatar_command): improved

2009-08-05  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_pager_mb):
	Q with any combination-key quits pager

2009-08-04  Andreas K. Foerster  <info@akfoerster.de>

	* avtaddons.h: common prefix "avta_"
	All implementations and callers adapted

	* avtcwio.c: fix definition of vswprintf for MinGW :-(

	* filecooser.c: renamed from avtfilechooser.c
	to fit in old style ar files

	* avtaddons.c [AVTADDONS_DLL]: new conditional

	* avtposix.c: new file
	avtarsay.c, mingw/avtwindows.c: adapted

	* avtccio.c [!__USE_GNU] (avta_vprintf):
	allow unlimited size (needs C99 compliant libc)

	* avtccio.c (avta_putchar): allow characters > 255

2009-08-03  Andreas K. Foerster  <info@akfoerster.de>

	* mingw/avttermstub.c: new file
	avatarsay.c: adapted

	* avtaddons.h, avtterm.c (avtterm_send): new function
	was static write_term - all callers adapted

2009-08-02  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (avatar_command): 
	reenable the "slow"-command for demos

	* avtterm.c (get_character):
	new strategy for screen-updates

2009-08-01  Andreas K. Foerster  <info@akfoerster.de>

	* rename bell.flac into alert.flac
	avtar-audio.c, avatar.c: adapted

	* avatar.c (avt_show_text_cursor):
	don't update, when hold_update is set
	(avt_scroll_up): don't handle cursor here

	* avtterm.c (activate_cursor): new function
	All callers of avt_activate_cursor changed to activate_cursor
	(get_character): lock/unlock updates
